2005-07-25  Owen Taylor  <otaylor@redhat.com>

	reviewed by: cworth

	* src/cairo.[ch] src/cairo-gstate-private.h src/cairo-gstate.c
	src/cairoint.c: Add cairo_{get,set}_font_options().

	* doc/public/Makefile.am (IGNORE_HFILES): Add cairo-xlib-private.h

	* doc/public/cairo-sections.txt: Update

2005-07-24  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-ft-font.c (_render_glyph_outline): Fix size of allocated buffer
	for vertical subpixel rendering. (Reported by Fryderyk Dziarmagowski,
	http://bugzilla.gnome.org/show_bug.cgi?id=310935)
	(_get_pattern_load_flags): Fix a problem where we were OR'ing multiple
	FT_LOAD_* flags together.

	* src/cairo-xlib-screen.c (_cairo_xlib_init_screen_font_options): Fix 
	reversed check for subpixel or not.

2005-07-23  Malcolm Tredinnick  <malcolm@commsecure.com.au>

	* src/cairo-ft-font.c:
	* src/cairo.h: Add some missing parameters for API docs.

2005-07-23  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-private.h src/cairo-xlib-screen.c: Switch to using
	Screen * not screen number to match surface code.

	* src/cairo-xlib-screen.c: Get the screen info for the right screen
	for the surface.
	
2005-07-22  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-ft-font.c: Protect against division by zero in various places.
	(http://bugzilla.gnome.org/show_bug.cgi?id=311299, reported by Ali Akcaagac)
	
2005-07-22  Owen Taylor  <otaylor@redhat.com>

	Patch from Tor Lillqvist  <tml@novell.com>

	* src/cairo-win32-font.c: Define TT_PRIM_CSPLINE if it wasn't in
	the headers.
	(_get_system_quality): Add missing variable smoothing_type.

2005-07-22  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Get the case right. It's cairo, not Cairo.

2005-07-22  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Note that sub-pixel text rendering is done now.

2005-07-21  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-ft-font.c: The FT_LOAD_TARGET_* flags aren't separate
	bitfields, but rather an embedded subfield, so test with